main add unexisting route, add loader component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "Test translate": "Test translate",
   "Translate": "Translate",
   "Main page": "Main page",
-  "Language": "English"
+  "Language": "English",
+  "Page not found": "Page not found"
 }
