--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Test translate": "Тестовый перевод",
   "Translate": "Перевод",
   "Main page": "Главная страница",
-  "Language": "Русский"
+  "Language": "Русский",
+  "Page not found": "Страница не найдена"
 }
