main add error boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,8 @@
   "Translate": "Translate",
   "Main page": "Main page",
   "Language": "English",
-  "Page not found": "Page not found"
+  "Page not found": "Page not found",
+  "Some error": "You go",
+  "Refresh page": "Refresh page",
+  "text": "text"
 }
