--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,8 @@
   "Translate": "Перевод",
   "Main page": "Главная страница",
   "Language": "Русский",
-  "Page not found": "Страница не найдена"
+  "Page not found": "Страница не найдена",
+  "Some error": "Произошла непредвиденная ошибка",
+  "Refresh page": "Refresh page",
+  "text": "text"
 }
