main add storybook, loky

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "Page not found": "Страница не найдена",
   "Some error": "Произошла непредвиденная ошибка",
   "Refresh page": "Refresh page",
-  "text": "text"
+  "text": "text",
+  "Main Page": "Main Page",
+  "About": "About"
 }
