--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "Page not found": "Page not found",
   "Some error": "You go",
   "Refresh page": "Refresh page",
-  "text": "text"
+  "text": "text",
+  "Main Page": "Main Page",
+  "About": "About"
 }
