--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
   "Refresh page": "Refresh page",
   "text": "text",
   "Main Page": "Main Page",
-  "About": "About"
+  "About": "About",
+  "Toggle": "Toggle"
 }
