--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,13 +1,13 @@
 {
   "Test translate": "Test translate",
   "Translate": "Translate",
-  "Main page": "Main page",
   "Language": "English",
   "Page not found": "Page not found",
   "Some error": "You go",
   "Refresh page": "Refresh page",
   "text": "text",
-  "Main Page": "Main Page",
   "About": "About",
-  "Toggle": "Toggle"
+  "Toggle": "Toggle",
+  "Short Language": "En",
+  "Main": "Main page"
 }
