add modal, portal, change header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,6 @@
   "About": "About",
   "Toggle": "Toggle",
   "Short Language": "En",
-  "Main": "Main page"
+  "Main": "Main page",
+  "Log In": "Log In"
 }
