--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "text": "text",
   "Toggle": "Переключить",
   "Short Language": "Рус",
-  "Main": "Главная страница"
+  "Main": "Главная страница",
+  "Log In": "Войти"
 }
