--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,7 @@
   "Toggle": "Toggle",
   "Short Language": "En",
   "Main": "Main page",
-  "Log In": "Log In"
+  "Log In": "Log In",
+  "Increment": "Increment",
+  "Decrement": "Decrement"
 }
