add new input, add login form ui, storybooks

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,7 @@
   "Main": "Main page",
   "Log In": "Log In",
   "Increment": "Increment",
-  "Decrement": "Decrement"
+  "Decrement": "Decrement",
+  "Username": "Username",
+  "Password": "Password"
 }
