--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,7 @@
   "Main": "Главная страница",
   "Log In": "Войти",
   "Increment": "Increment",
-  "Decrement": "Decrement"
+  "Decrement": "Decrement",
+  "Username": "Username",
+  "Password": "Password"
 }
