--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Password": "Password",
   "Authorization": "Authorization",
   "Incorrect login or password": "Incorrect login or password",
-  "Log Out": "Log Out"
+  "Log Out": "Log Out",
+  "Profile page": "Profile page"
 }
