add article entity, slice, thunk, skeleton ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,6 @@
   "Log Out": "Log Out",
   "Profile page": "Profile page",
   "Specify currency": "Specify currency",
-  "Specify country": "Specify country"
+  "Specify country": "Specify country",
+  "Error while loading an article": "Error while loading an article"
 }
