--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,3 +1,4 @@
 {
-  "Article does not found": "Article does not found"
+  "Article does not found": "Article does not found",
+  "": "Comments:"
 }
