--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,6 @@
   "Profile page": "Profile page",
   "Specify currency": "Specify currency",
   "Specify country": "Specify country",
-  "Error while loading an article": "Error while loading an article"
+  "Error while loading an article": "Error while loading an article",
+  "Comments does not exists": "Comments does not exists"
 }
