--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,4 +1,5 @@
 {
   "Article does not found": "Article does not found",
-  "": "Comments:"
+  "": "Comments:",
+  "Back to list": "Back to list"
 }
